petites correction design pour accessibilite : contraste etc

--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ a:hover {
 .d-bloc h6 a,
 .d-bloc p a {
     color: rgba(255, 255, 255, .75);
+    transition: all 0.3s;
 }
 
 .d-bloc .a-btn:hover,
@@ -154,6 +155,7 @@ a:hover {
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
+    transform: scale(1.3);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -519,7 +521,7 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -697,7 +699,7 @@ p {
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
-    color: #f8d78f;
+    color: #f7e5bc;
 }
 
 .h1 {
@@ -773,7 +775,7 @@ h4 {
 }
 
 .black-background {
-    background-color:rgba(165, 147, 99, 0.9);
+    background-color:rgba(124, 110, 72, 0.9);
     padding: 40px 40px 40px 40px;
 }
 
@@ -807,6 +809,7 @@ h4 {
 .btn-atomic-tangerine:hover {
     background: #a5212e!important;
     color: #FFFFFF!important;
+    transform: scale(1.1);
 }
 
 .btn-atomic-yellow {
@@ -817,6 +820,7 @@ h4 {
 .btn-atomic-yellow:hover {
     background: #facb50!important;
     color: #575757!important;
+    transform: scale(1.1);
 }
 
 .ltc-white {
@@ -1118,6 +1122,3 @@ input:invalid, textarea:invalid{
     border-color:rgb(228, 16, 16);
 }
 
-adress a{
-    color: black;
-}
